--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -11,12 +11,12 @@
     },
     "Abautme": {
         "hours": "Hours",
-        "Monday": "Monday",
-        "Tuesday": "Tuesday",
-        "Wednesday": "Wednesday",
-        "Thursday": "Thursday",
-        "Friday": "Friday",
-        "Saturday": "Saturday",
+        "Monday": "Monday : 12pm to 7pm",
+        "Tuesday": "Tuesday : 12pm to 7pm",
+        "Wednesday": "Wednesday : 12pm to 7pm",
+        "Thursday": "Thursday : 12pm to 7pm",
+        "Friday": "Friday : 12pm to 7pm",
+        "Saturday": "Saturday : 12pm  7pm",
         "title": "Additionally, there are 5 reasons why Men prefer the Barbershop 'El Corte”",
         "card_1": "✓ Warm and welcoming environment.",
         "card_2": "✓ Our master barbers focus on quality.",
